--- a/AssetTracking/Base.lproj/Main.storyboard
+++ b/AssetTracking/Base.lproj/Main.storyboard
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Yellowtail-Regular.ttf">
+            <string>Yellowtail</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="AssetTracking" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="BYZ-38-t0r" customClass="LoginViewController" customModule="AssetTracking" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -20,11 +26,109 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Blur" translatesAutoresizingMaskIntoConstraints="NO" id="LuC-DP-dng">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Asset Tracking System" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VgM-6d-M2C">
+                                <rect key="frame" x="37" y="59" width="310" height="41"/>
+                                <fontDescription key="fontDescription" name="Yellowtail" family="Yellowtail" pointSize="32"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E3a-dL-kXv" customClass="LoginView" customModule="AssetTracking" customModuleProvider="target">
+                                <rect key="frame" x="37" y="243" width="300" height="180"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="1bZ-QQ-qK6">
+                                        <rect key="frame" x="8" y="17" width="284" height="130"/>
+                                        <subviews>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="UserName" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NP0-DJ-uT7">
+                                                <rect key="frame" x="0.0" y="0.0" width="284" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="284" id="AGy-FL-WBR"/>
+                                                </constraints>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="BYZ-38-t0r" id="o3R-O4-7x9"/>
+                                                </connections>
+                                            </textField>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lXs-MK-ffY">
+                                                <rect key="frame" x="0.0" y="50" width="284" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="284" id="Ytx-2V-Ed2"/>
+                                                </constraints>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Uxd-6m-xtp"/>
+                                                </connections>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tfn-CX-EC2" customClass="LoginButton" customModule="AssetTracking" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="100" width="284" height="30"/>
+                                                <color key="backgroundColor" red="0.0044474481189999996" green="0.52728345379999997" blue="0.97190276019999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="284" id="nnX-0W-Yct"/>
+                                                </constraints>
+                                                <state key="normal" title="Login">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                        <real key="value" value="6"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="loginAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="71J-fY-mvx"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.32651969178082191" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="1bZ-QQ-qK6" firstAttribute="leading" secondItem="E3a-dL-kXv" secondAttribute="leading" constant="8" id="SOe-7R-Ok7"/>
+                                    <constraint firstItem="1bZ-QQ-qK6" firstAttribute="top" secondItem="E3a-dL-kXv" secondAttribute="top" constant="17" id="o2B-9G-sD9"/>
+                                    <constraint firstAttribute="height" constant="180" id="q7s-mf-E2e"/>
+                                    <constraint firstAttribute="trailing" secondItem="1bZ-QQ-qK6" secondAttribute="trailing" constant="8" id="vBX-dJ-1zQ"/>
+                                    <constraint firstAttribute="width" constant="300" id="xeg-zj-jeM"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="12"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="VgM-6d-M2C" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="21" id="7gF-Ev-EZb"/>
+                            <constraint firstItem="E3a-dL-kXv" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="8ME-lt-Z5B"/>
+                            <constraint firstItem="E3a-dL-kXv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AZf-fg-dQt"/>
+                            <constraint firstItem="LuC-DP-dng" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Is7-9z-hlB"/>
+                            <constraint firstItem="LuC-DP-dng" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="TZX-ip-qMI"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="LuC-DP-dng" secondAttribute="bottom" id="cad-J2-a78"/>
+                            <constraint firstItem="VgM-6d-M2C" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="39" id="n9X-jb-ZLW"/>
+                            <constraint firstAttribute="trailing" secondItem="LuC-DP-dng" secondAttribute="trailing" id="tuJ-Ev-qlu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="VgM-6d-M2C" secondAttribute="trailing" constant="12" id="vqz-fm-RQk"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="password" destination="lXs-MK-ffY" id="kBs-4V-e2g"/>
+                        <outlet property="userName" destination="NP0-DJ-uT7" id="A5I-NP-yTl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-1614" y="107"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Blur" width="3840" height="2400"/>
+    </resources>
 </document>
