--- a/AssetTracking/Base.lproj/Main.storyboard
+++ b/AssetTracking/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="LoginViewController" id="BYZ-38-t0r" customClass="LoginViewController" customModule="AssetTracking" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" modalTransitionStyle="flipHorizontal" id="BYZ-38-t0r" customClass="LoginViewController" customModule="AssetTracking" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -31,13 +31,13 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Asset Tracking System" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VgM-6d-M2C">
-                                <rect key="frame" x="37" y="59" width="310" height="41"/>
+                                <rect key="frame" x="37" y="59" width="310" height="37.5"/>
                                 <fontDescription key="fontDescription" name="Yellowtail" family="Yellowtail" pointSize="32"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E3a-dL-kXv" customClass="LoginView" customModule="AssetTracking" customModuleProvider="target">
-                                <rect key="frame" x="37" y="243" width="300" height="180"/>
+                                <rect key="frame" x="37.5" y="243.5" width="300" height="180"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="1bZ-QQ-qK6">
                                         <rect key="frame" x="8" y="17" width="284" height="130"/>
@@ -125,10 +125,174 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1614" y="107"/>
+            <point key="canvasLocation" x="-1962" y="60"/>
+        </scene>
+        <!--Home View Controller-->
+        <scene sceneID="ZfD-is-oaj">
+            <objects>
+                <viewController storyboardIdentifier="HomeViewController" modalTransitionStyle="flipHorizontal" id="wUv-qm-5dd" customClass="HomeViewController" customModule="AssetTracking" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fg2-Zq-rjE"/>
+                        <viewControllerLayoutGuide type="bottom" id="iwq-6A-UUE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="sVD-I0-rsV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="wTx-5C-ZWq">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Upo-iX-7mv">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Zs7-qd-hkE">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="27" translatesAutoresizingMaskIntoConstraints="NO" id="X3i-nJ-FmN">
+                                            <rect key="frame" x="88" y="273" width="200" height="121"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SxP-zt-NIq" customClass="LoginButton" customModule="AssetTracking" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="0.0" width="200" height="47"/>
+                                                    <color key="backgroundColor" red="0.99019607843137258" green="1" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="47" id="GZX-Nu-fwy"/>
+                                                        <constraint firstAttribute="width" constant="200" id="VmP-9E-rWW"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Scan BarCode">
+                                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                            <real key="value" value="1"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <real key="value" value="10"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <segue destination="qLq-jM-3rn" kind="show" id="fm4-lw-sSc"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="anH-hE-lZO" customClass="LoginButton" customModule="AssetTracking" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="74" width="200" height="47"/>
+                                                    <color key="backgroundColor" red="0.99019607840000001" green="1" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="47" id="SbT-pp-JLo"/>
+                                                        <constraint firstAttribute="width" constant="200" id="s1B-9V-ROR"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Log out">
+                                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                            <real key="value" value="1"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <real key="value" value="10"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </button>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="X3i-nJ-FmN" firstAttribute="centerY" secondItem="Zs7-qd-hkE" secondAttribute="centerY" id="6xH-1H-EI6"/>
+                                        <constraint firstItem="X3i-nJ-FmN" firstAttribute="centerX" secondItem="Zs7-qd-hkE" secondAttribute="centerX" id="ead-ZP-wPY"/>
+                                    </constraints>
+                                </view>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="wTx-5C-ZWq" secondAttribute="trailing" id="2Uj-OH-1bK"/>
+                            <constraint firstItem="Upo-iX-7mv" firstAttribute="top" secondItem="sVD-I0-rsV" secondAttribute="top" id="3cO-R5-Vdd"/>
+                            <constraint firstItem="wTx-5C-ZWq" firstAttribute="top" secondItem="sVD-I0-rsV" secondAttribute="top" id="4cd-U1-Ohk"/>
+                            <constraint firstAttribute="trailing" secondItem="Upo-iX-7mv" secondAttribute="trailing" id="72o-qo-LIn"/>
+                            <constraint firstItem="wTx-5C-ZWq" firstAttribute="leading" secondItem="sVD-I0-rsV" secondAttribute="leading" id="Cp9-bH-4yP"/>
+                            <constraint firstItem="iwq-6A-UUE" firstAttribute="top" secondItem="wTx-5C-ZWq" secondAttribute="bottom" id="Qev-mw-za4"/>
+                            <constraint firstItem="Upo-iX-7mv" firstAttribute="leading" secondItem="sVD-I0-rsV" secondAttribute="leading" id="bHY-3v-JW2"/>
+                            <constraint firstItem="iwq-6A-UUE" firstAttribute="top" secondItem="Upo-iX-7mv" secondAttribute="bottom" id="weS-8b-HqH"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Z3-HS-bYN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1193" y="60"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="sQP-Vt-XLz">
+            <objects>
+                <viewController modalTransitionStyle="flipHorizontal" id="qLq-jM-3rn" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fIQ-Bh-jY0"/>
+                        <viewControllerLayoutGuide type="bottom" id="YY0-eO-4Be"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9wF-qe-Xxp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aci-IX-fA7">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8eK-fV-4mU">
+                                        <rect key="frame" x="60" y="30" width="255" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="255" id="5c6-op-WEo"/>
+                                            <constraint firstAttribute="height" constant="21" id="v4K-tM-xhK"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mmb-Yc-YQG">
+                                        <rect key="frame" x="8" y="26" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="C2Z-C3-SKh"/>
+                                            <constraint firstAttribute="height" constant="30" id="DZE-dG-YFS"/>
+                                        </constraints>
+                                        <state key="normal" backgroundImage="BackImage"/>
+                                        <connections>
+                                            <segue destination="9LZ-Co-oox" kind="unwind" unwindAction="unwindSegue:" id="edn-65-QHy"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.30057919025421143" green="0.79883497953414917" blue="0.9999510645866394" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="8eK-fV-4mU" firstAttribute="centerX" secondItem="aci-IX-fA7" secondAttribute="centerX" id="Jfd-2o-cgc"/>
+                                    <constraint firstItem="8eK-fV-4mU" firstAttribute="centerY" secondItem="aci-IX-fA7" secondAttribute="centerY" id="YtM-NF-zPl"/>
+                                    <constraint firstItem="Mmb-Yc-YQG" firstAttribute="leading" secondItem="aci-IX-fA7" secondAttribute="leading" constant="8" id="eyB-29-XOv"/>
+                                    <constraint firstAttribute="height" constant="80" id="hEc-kA-Irr"/>
+                                    <constraint firstAttribute="bottom" secondItem="Mmb-Yc-YQG" secondAttribute="bottom" constant="24" id="ri4-zU-qDT"/>
+                                    <constraint firstItem="Mmb-Yc-YQG" firstAttribute="top" secondItem="aci-IX-fA7" secondAttribute="top" constant="26" id="vA8-us-aga"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Utd-NJ-1MG">
+                                <rect key="frame" x="0.0" y="80" width="375" height="587"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="aci-IX-fA7" firstAttribute="top" secondItem="9wF-qe-Xxp" secondAttribute="top" id="DMd-c9-1Io"/>
+                            <constraint firstAttribute="trailing" secondItem="Utd-NJ-1MG" secondAttribute="trailing" id="MiU-Co-H73"/>
+                            <constraint firstItem="Utd-NJ-1MG" firstAttribute="leading" secondItem="9wF-qe-Xxp" secondAttribute="leading" id="RG2-9Q-kiL"/>
+                            <constraint firstAttribute="trailing" secondItem="aci-IX-fA7" secondAttribute="trailing" id="fM0-QR-Pb3"/>
+                            <constraint firstItem="YY0-eO-4Be" firstAttribute="top" secondItem="Utd-NJ-1MG" secondAttribute="bottom" id="kwW-02-p7K"/>
+                            <constraint firstItem="Utd-NJ-1MG" firstAttribute="top" secondItem="aci-IX-fA7" secondAttribute="bottom" id="rLR-EI-u1t"/>
+                            <constraint firstItem="aci-IX-fA7" firstAttribute="leading" secondItem="9wF-qe-Xxp" secondAttribute="leading" id="yPy-pq-wPa"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YvI-r9-Qgy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="9LZ-Co-oox" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="-511.19999999999999" y="59.820089955022496"/>
         </scene>
     </scenes>
     <resources>
+        <image name="BackImage" width="1600" height="1600"/>
         <image name="Blur" width="3840" height="2400"/>
+        <image name="logo" width="451" height="577"/>
     </resources>
 </document>
